--- a/campus.html
+++ b/campus.html
@@ -245,7 +245,7 @@
         </div>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
