--- a/events.html
+++ b/events.html
@@ -18,9 +18,6 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- =================================================================== -->
-    <!-- START: NEW CSS FOR "ALL EVENTS" CARDS ONLY -->
-    <!-- =================================================================== -->
     <style>
         /* New Styles for Modern Event Cards */
         .event-card-modern {
@@ -30,9 +27,9 @@
             padding: 1.5rem;
             display: flex;
             gap: 1.5rem;
-            align-items: stretch; /* Make children stretch to full height */
+            align-items: stretch; 
             transition: all 0.3s ease;
-            overflow: hidden; /* Hide overflow from hover effects */
+            overflow: hidden; 
         }
 
         .event-card-modern:hover {
@@ -110,9 +107,6 @@
             }
         }
     </style>
-    <!-- =================================================================== -->
-    <!-- END: NEW CSS -->
-    <!-- =================================================================== -->
 
 </head>
 
@@ -278,9 +272,6 @@
             </div>
         </section>
 
-        <!-- =================================================================== -->
-        <!-- START: UPDATED "ALL EVENTS" SECTION -->
-        <!-- =================================================================== -->
         <section class="section">
             <h2 class="section-title">All Events</h2>
             <p class="section-subtitle">Complete list of upcoming events, workshops, and activities</p>
@@ -367,9 +358,6 @@
 
             </div>
         </section>
-        <!-- =================================================================== -->
-        <!-- END: UPDATED "ALL EVENTS" SECTION -->
-        <!-- =================================================================== -->
 
         <!-- Event Calendar -->
         <section class="section" id="calendar">
