--- a/programs/index.html
+++ b/programs/index.html
@@ -89,7 +89,7 @@
                     <div class="grid grid-2">
                         <!-- MBA Program Card -->
                         <div class="card" data-animate="slideInLeft">
-                            <div style="display: flex; align-items: center; margin-bottom: 1rem;">
+                            <div style="text-align: center; margin-bottom: 2rem;">
                                 <div style="font-size: 3rem; margin-right: 1rem;">🎓</div>
                                 <div>
                                     <h3>Master of Business Administration (MBA)</h3>
@@ -133,7 +133,7 @@
 
                         <!-- B.Sc IT Program Card -->
                         <div class="card" data-animate="slideInRight">
-                            <div style="display: flex; align-items: center; margin-bottom: 1rem;">
+                            <div style="text-align: center; margin-bottom: 2rem;">
                                 <div style="font-size: 3rem; margin-right: 1rem;">💻</div>
                                 <div>
                                     <h3>B.Sc (Hons) Information Technology</h3>
