--- a/fields/index.html
+++ b/fields/index.html
@@ -85,7 +85,7 @@
                 <!-- Programming Field -->
                 <a href="programming.html" class="card" style="text-decoration: none; display: block;"
                     data-animate="slideInLeft">
-                    <div style="display: flex; align-items: center; margin-bottom: 2rem;">
+                    <div style="text-align: center; margin-bottom: 2rem;">
                         <div style="font-size: 4rem; margin-right: 1rem;">💻</div>
                         <div>
                             <h3>Programming & Software Development</h3>
@@ -133,7 +133,7 @@
                 <!-- Accounting Field -->
                 <a href="accounting.html" class="card" style="text-decoration: none; display: block;"
                     data-animate="slideInRight">
-                    <div style="display: flex; align-items: center; margin-bottom: 2rem;">
+                    <div style="text-align: center; margin-bottom: 2rem;">
                         <div style="font-size: 4rem; margin-right: 1rem;">📊</div>
                         <div>
                             <h3>Accounting & Finance</h3>
@@ -181,7 +181,7 @@
                 <!-- Mathematics Field -->
                 <a href="mathematics.html" class="card" style="text-decoration: none; display: block;"
                     data-animate="slideInLeft">
-                    <div style="display: flex; align-items: center; margin-bottom: 2rem;">
+                    <div style="text-align: center; margin-bottom: 2rem;">
                         <div style="font-size: 4rem; margin-right: 1rem;">🔢</div>
                         <div>
                             <h3>Mathematics & Analytics</h3>
@@ -231,7 +231,7 @@
                 <!-- Linguistics Field -->
                 <a href="linguistics.html" class="card" style="text-decoration: none; display: block;"
                     data-animate="slideInRight">
-                    <div style="display: flex; align-items: center; margin-bottom: 2rem;">
+                    <div style="text-align: center; margin-bottom: 2rem;">
                         <div style="font-size: 4rem; margin-right: 1rem;">🗣️</div>
                         <div>
                             <h3>Linguistics & Communication</h3>
