--- a/campus.html
+++ b/campus.html
@@ -85,7 +85,7 @@
                     <a href="#" class="btn btn-secondary">Join Club</a>
                 </div>
                 <div class="card">
-                    <h3>💡 Entrepreneurship Cell</h3>
+                    <h3>💡 Entrepreneur Cell</h3>
                     <p>Nurture your business ideas from conception to launch. The E-Cell provides mentorship, funding
                         opportunities, and networking events for aspiring entrepreneurs.</p>
                     <a href="#" class="btn btn-secondary">Get Involved</a>
