--- a/faculty.html
+++ b/faculty.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
 
-            <h2 class="section-title mt-3">School of Business Administration</h2>
+            <h2 class="section-title mt-3">College of Business Administration</h2>
             <div class="grid grid-4">
                 <div class="profile-card">
                     <div class="profile-image"><img src="./images/Dr. Vikram Joshi.jpg"
@@ -204,7 +204,7 @@
         </div>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
