Fix script path for GitHub Pages

--- a/testimonials.html
+++ b/testimonials.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Read success stories from students and alumni of the Nepal Institute of Technology.">
 
     <!-- Fonts & CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -160,6 +160,6 @@
         </div>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
