--- a/forums.html
+++ b/forums.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Join the discussion forums at NIT. Connect with students, faculty, and alumni.">
 
     <!-- Fonts & CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <style>
         /* Custom styles for forums */
         .forum-header {
@@ -258,7 +258,7 @@
         </div>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
