--- a/resources.html
+++ b/resources.html
@@ -9,7 +9,7 @@
         content="Access academic resources, digital library, career services, and student support at NIT.">
 
     <!-- Fonts & CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -187,7 +187,7 @@
         </div>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
